# Sokoban

./: CMakeLists.txt  Gtk_dialogs.c  Gtk_dialogs.h  LICENSE  Level.c  Level.h  Level_draw.c  Level_file.c  Przykładowe poziomy.txt  README.md  main.c
